[add] send password by email in tpe registration